plugins/kotlin/idea/tests/testData/multiplatform/aliasesTypeMismatch/commonLibrary/lib.kt
public expect open class <!LINE_MARKER("descr='Has actuals in jvmLibrary module'"), LINE_MARKER("descr='Is subclassed by MyCancelException [common] MyIllegalStateException [commonLibrary] OtherException [common] Press ... to navigate'")!>MyException<!>

public expect open class <!LINE_MARKER("descr='Has actuals in jvmLibrary module'"), LINE_MARKER("descr='Is subclassed by MyCancelException [common] OtherException [common] Press ... to navigate'")!>MyIllegalStateException<!> : MyException
